feat: added animations

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"
     />
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./dist/style.css" />
     <title>Neon - codeboost</title>
   </head>
@@ -89,6 +90,7 @@
       >
         <div
           class="w-full max-xl:max-w-full xl:max-w-[684px] max-xl:flex max-xl: flex-col max-xl:items-center"
+          data-aos="fade-right"
         >
           <h3
             class="font-Poppins text-center xl:text-start text-white font-semibold opacity-80 text-base md:text-lg xl:text-2xl leading-[150%] -tracking-[0.5px] mb-4 md:mb-6 xl:mb-8"
@@ -148,11 +150,13 @@
         >
           <h2
             class="hidden md:block text-[40px] xl:text-[56px] font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-center xl:mb-16"
+            data-aos="fade-left"
           >
             Banco 100% digital
           </h2>
           <div
             class="w-full flex justify-center max-w-[317px] md:max-w-[511px] xl:w-full mx-auto relative mt-[51px] md:mt-5 xl:top-6"
+            data-aos="zoom-in"
           >
             <img
               class="absolute top-[29px] md:top-[35px] 2xl:top-[30px] left-0 md:-left-[67px] 2xl:-left-[140px] z-20 max-w-[211px] md:max-w-[340px] 2xl:max-w-[438px]"
@@ -188,15 +192,18 @@
               class="absolute hidden xl:flex -z-10 -left-[214px] top-[88px] max-w-[377px]"
               src="./src/assets/img/circle-mockup.svg"
               alt=""
+              data-aos="fade-left"
             />
             <img
               class="drop-shadow-2xl xl:h-full"
               src="./src/assets/img/mockup.svg"
               alt=""
+              data-aos="flip-right"
             />
           </div>
           <div
             class="w-full flex flex-col items-center pt-[117px] md:pt-0 xl:pt-[129px]"
+            data-aos="fade-up"
           >
             <div
               class="xl:before:content-point xl:before:absolute xl:before:w-1 xl:before:h-20 xl:before:-top-[104px] xl:before:left-[50%] xl:before:-ml-1 relative"
@@ -233,6 +240,7 @@
         <div class="w-full max-w-[800px] xl:items-start justify-start">
           <div
             class="mb-[34px] md:mb-[57px] xl:mb-[144px] flex flex-col items-center xl:items-start"
+            data-aos="fade-left"
           >
             <h2
               class="font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-semibold text-[28px] md:text-4xl xl:text-[40px] text-center xl:text-start max-w-[317px] md:max-w-[424px] xl:max-w-[488px] mb-[37px] md:mb-[53px] xl:mb-12"
@@ -311,6 +319,7 @@
           </div>
           <div
             class="h-[470px] md:h-[352px] xl:h-[410px] max-w-[336px] md:max-w-[688px] xl:max-w-[800px] mx-auto bg-[url('/src/assets/img/bg-box-card-neon.svg')] bg-no-repeat bg-bottom md:bg-center bg-cover rounded-xl flex flex-col md:flex-row items-center xl:justify-between md:pl-[50px] xl:pl-[59px] xl:ml-0 relative"
+            data-aos="fade-left"
           >
             <div
               class="w-full max-w-[380px] md:max-w-[326px] flex flex-col items-center"
@@ -358,6 +367,7 @@
       <div class="container p-0 max-md:max-w-full max-w-[1214px] mx-auto">
         <div
           class="mb-9 md:mb-14 flex flex-col items-center justify-center xl:items-end xl:justify-between relative w-full"
+          data-aos="fade-right"
         >
           <h2
             class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-2xl md:text-4xl xl:text-[40px] text-center xl:text-start w-full"
@@ -370,7 +380,10 @@
           </h2>
           <div class="paginator-depoimentos relative flex !w-auto"></div>
         </div>
-        <div class="depoimentos overflow-hidden px-5 xl:px-0">
+        <div
+          class="depoimentos overflow-hidden px-5 xl:px-0"
+          data-aos="fade-up"
+        >
           <div class="swiper-wrapper">
             <div
               class="swiper-slide w-[249px] xl:max-w-full bg-brand-grey-1/[55%] rounded-lg pt-[37px] px-[32px] pb-10"
@@ -472,7 +485,10 @@
       <div
         class="container mx-auto max-md:max-w-full max-w-[1214px] px-5 flex flex-col xl:flex-row items-center xl:items-start"
       >
-        <div class="max-w-[542px] md:max-w-[630px] flex flex-col">
+        <div
+          class="max-w-[542px] md:max-w-[630px] flex flex-col"
+          data-aos="fade-right"
+        >
           <h2
             class="font-Poppins text-brand-grey-2 -tracking-[1px] leading-[112%] font-bold text-2xl xl:text-[40px] text-center xl:text-start mb-10 xl:mb-[45px] w-full"
           >
@@ -568,21 +584,25 @@
             class="absolute w-[168px] md:w-[225px] h-[352px] md:h-[478px] top-[57px] md:top-[25px] xl:top-[70px] -left-[10px] md:left-[52px] xl:-left-[60px] z-10"
             src="/src/assets/img/mockup-01.svg"
             alt=""
+            data-aos="fade-up"
           />
           <img
             class="absolute w-[168px] md:w-[225px] h-[357px] md:h-[478px] top-0 md:-top-[51px] xl:-top-0 -right-[10px] md:right-[51px] xl:right-[253px] z-10"
             src="/src/assets/img/mockup-02.png"
             alt=""
+            data-aos="fade-down"
           />
           <img
             class="invisible xl:visible absolute w-[323px] md:w-[582px] xl:w-[510px] top-[146px] md:top-0 xl:right-0 xl:top-[123px]"
             src="/src/assets/img/circle-conta-digital.svg"
             alt=""
+            data-aos="zoom-in"
           />
           <img
             class="absolute xl:invisible w-[323px] md:w-[582px] xl:w-[510px] top-[146px] md:top-0 right-0"
             src="/src/assets/img/circle-conta-digital-mobile.svg"
             alt=""
+            data-aos="zoom-in"
           />
         </div>
       </div>
@@ -891,7 +911,7 @@
     </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script src="./src/assets/js/index.js"></script>
   </body>
 </html>
