feat: added metatags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,43 @@
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="./dist/style.css" />
-    <title>Neon - codeboost</title>
+
+    <title>Redesign - Banco Neon</title>
+    <meta name="title" content="Redesign -  Banco Neon" />
+    <meta
+      name="description"
+      content="Confira o redesign do site do Banco Neon, um projeto de estudo realizado durante o curso do CodeBoost. Explore as melhorias de design e navegação implementadas para aprimorar a experiência do usuário."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:url"
+      content="https://lp-neon-olive.vercel.app/src/assets/img/share-img.jpg"
+    />
+    <meta property="og:title" content="Redesign -  Banco Neon" />
+    <meta
+      property="og:description"
+      content="Confira o redesign do site do Banco Neon, um projeto de estudo realizado durante o curso do CodeBoost. Explore as melhorias de design e navegação implementadas para aprimorar a experiência do usuário."
+    />
+    <meta
+      property="og:image"
+      content="https://lp-neon-olive.vercel.app/src/assets/img/share-img.jpg"
+    />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta
+      property="twitter:url"
+      content="https://lp-neon-olive.vercel.app/src/assets/img/share-img.jpg"
+    />
+    <meta property="twitter:title" content="Redesign -  Banco Neon" />
+    <meta
+      property="twitter:description"
+      content="Confira o redesign do site do Banco Neon, um projeto de estudo realizado durante o curso do CodeBoost. Explore as melhorias de design e navegação implementadas para aprimorar a experiência do usuário."
+    />
+    <meta
+      property="twitter:image"
+      content="https://lp-neon-olive.vercel.app/src/assets/img/share-img.jpg"
+    />
   </head>
   <body>
     <header
