feat: added some fixes and favicon

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/png" href="./src/assets/img/favicon.png" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -185,7 +186,7 @@
           class="w-full md:-mr-[0px] xl:max-w-[706px] xl:-mr-[80px] 2xl:-mr-[174px] md:mt-[50px] xl:mt-0"
         >
           <h2
-            class="hidden md:block text-[40px] xl:text-[56px] font-Poppins text-white opacity-40 -tracking-[1px] leading-[112%] font-semibold text-center xl:mb-16"
+            class="hidden md:block text-[40px] xl:text-[56px] font-Poppins text-white/40 -tracking-[1px] leading-[112%] font-semibold text-center xl:mb-16"
             data-aos="fade-left"
           >
             Banco 100% digital
