fix: responsive text

--- a/index.html
+++ b/index.html
@@ -411,7 +411,7 @@
           >
             Prático, fácil, moderno
             <span
-              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[28px] md:text-4xl xl:text-[40px] w-full md:w-full xl:max-w-[618px] text-center xl:text-start mb-9 md:mb-12 xl:mb-0 pt-3 xl:pt-[14px]"
+              class="block font-Poppins text-brand-grey-6 -tracking-[1px] leading-[112%] font-bold text-[28px] md:text-4xl xl:text-[40px] max-w-[239px] md:max-w-[549px] xl:max-w-[618px] text-center xl:text-start mb-9 md:mb-12 xl:mb-0 pt-3 xl:pt-[14px] mx-auto xl:m-0"
               >Você resolve tudo sem estresse</span
             >
           </h2>
